--- a/package.json
+++ b/package.json
@@ -6,24 +6,34 @@
     "scripts": {
         "start": "nest start",
         "start:dev": "nest start --watch",
-        "build": "nest build"
+        "build": "nest build",
+        "compile": "tsc",
+        "test": "jest",
+        "lint": "eslint --ext .ts ./*",
+        "test:watch": "jest --watch",
+        "test:cov": "jest --coverage",
+        "test:e2e": "jest --config ./test/jest-e2e.json"
     },
     "dependencies": {
         "@nestjs/common": "^10.0.0",
         "@nestjs/core": "^10.0.0",
         "@nestjs/platform-express": "^10.0.0",
         "@nestjs/typeorm": "^10.0.0",
-        "typeorm": "^0.3.0",
-        "pg": "^8.0.0",
         "ioredis": "^5.0.0",
+        "pg": "^8.0.0",
         "reflect-metadata": "^0.1.13",
-        "rxjs": "^7.0.0"
+        "rxjs": "^7.0.0",
+        "typeorm": "^0.3.0"
     },
     "devDependencies": {
         "@nestjs/cli": "^10.0.0",
         "@nestjs/schematics": "^10.0.0",
         "@nestjs/testing": "^10.0.0",
-        "typescript": "^5.0.0",
-        "ts-node": "^10.0.0"
+        "@typescript-eslint/eslint-plugin": "^8.36.0",
+        "@typescript-eslint/parser": "^8.36.0",
+        "eslint": "^9.30.1",
+        "ts-node": "^10.0.0",
+        "typescript": "^5.0.0"
     }
 }
+
